syntax = "proto2";

package sharing.nearby;

option optimize_for = LITE_RUNTIME;

message Frame {
  enum Version {
    UNKNOWN_VERSION = 0;
    V1 = 1;
  }
  optional Version version = 1;

  optional V1Frame v1 = 2;
}

message V1Frame {
  enum FrameType {
    UNKNOWN_FRAME_TYPE = 0;
    INTRODUCTION = 1;
    RESPONSE = 2;
    PAIRED_KEY_ENCRYPTION = 3;
    PAIRED_KEY_RESULT = 4;
    CERTIFICATE_INFO = 5;
    CANCEL = 6;
    PROGRESS_UPDATE = 7;
    // Frame Types 8-11 are likely different updates or negotiations
    KEEP_ALIVE = 12; // Inferred from logs & "screen off" behavior
  }

  optional FrameType type = 1;

  optional IntroductionFrame introduction = 2;
  optional ConnectionResponseFrame connection_response = 3;
  optional PairedKeyEncryptionFrame paired_key_encryption = 4;
  optional PairedKeyResultFrame paired_key_result = 5;
  optional CertificateInfoFrame certificate_info = 6;
  optional KeepAliveFrame keep_alive = 7; // Matching usage for type 12 (KeepAlive)
}

message CertificateInfoFrame {
  repeated PublicCertificate public_certificate = 1;
}

message PublicCertificate {
  optional bytes secret_id = 1;
  optional bytes authenticity_key = 2;
  optional bytes public_key = 3;
  optional int64 start_time = 4;
  optional int64 end_time = 5;
  optional bytes encrypted_metadata_bytes = 6;
  optional bytes metadata_encryption_key_tag = 7;
}

message KeepAliveFrame {
  optional bool ack = 1;
}

message IntroductionFrame {
  repeated FileMetadata file_metadata = 1;
  repeated TextMetadata text_metadata = 2;
  optional string required_package = 3;
  repeated WifiCredentialsMetadata wifi_credentials_metadata = 4;
  repeated AppMetadata app_metadata = 5;
  optional bool start_transfer = 6;
  repeated StreamMetadata stream_metadata = 7;
}

message ConnectionResponseFrame {
  enum Status {
    UNKNOWN = 0;
    ACCEPT = 1;
    REJECT = 2;
    NOT_ENOUGH_SPACE = 3;
    UNSUPPORTED_ATTACHMENT_TYPE = 4;
    TIMED_OUT = 5;
  }

  optional Status status = 1;
}

message PairedKeyEncryptionFrame {
  optional bytes signed_data = 1;
  optional bytes secret_id_hash = 2;
  optional bytes optional_signed_data = 3;
  optional bytes qr_code_handshake_data = 4;
}

message PairedKeyResultFrame {
  enum Status {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAIL = 2;
    UNABLE = 3;
  }

  optional Status status = 1;
}

message FileMetadata {
  enum Type {
    UNKNOWN = 0;
    IMAGE = 1;
    VIDEO = 2;
    ANDROID_APP = 3;
    AUDIO = 4;
    DOCUMENT = 5;
    CONTACT_CARD = 6;
  }

  optional string name = 1;
  optional Type type = 2 [default = UNKNOWN];
  optional int64 payload_id = 3;
  optional int64 size = 4;
  optional string mime_type = 5 [default = "application/octet-stream"];
  optional int64 id = 6;
}

message TextMetadata {
  enum Type {
    UNKNOWN = 0;
    TEXT = 1;
    URL = 2;
    ADDRESS = 3;
    PHONE_NUMBER = 4;
  }

  optional string text_title = 2;
  optional Type type = 3 [default = UNKNOWN];
  optional int64 payload_id = 4;
  optional int64 size = 5;
  optional int64 id = 6;
}

message WifiCredentialsMetadata {
  enum SecurityType {
    UNKNOWN_SECURITY_TYPE = 0;
    OPEN = 1;
    WPA_PSK = 2;
    WEP = 3;
    SAE = 4;
  }

  optional string ssid = 2;
  optional SecurityType security_type = 3 [default = UNKNOWN_SECURITY_TYPE];
  optional int64 payload_id = 4;
  optional int64 id = 5;
}

message AppMetadata {
  optional string app_name = 1;
  optional int64 size = 2;
  repeated int64 payload_id = 3 [packed = true];
  optional int64 id = 4;
  repeated string file_name = 5;
  repeated int64 file_size = 6 [packed = true];
  optional string package_name = 7;
}

message StreamMetadata {
  optional string description = 1;
  optional string package_name = 2;
  optional int64 payload_id = 3;
  optional string attributed_app_name = 4;
}
